currently cleaning file i/o

--- a/in/bibtex/review.bib
+++ b/in/bibtex/review.bib
@@ -24,7 +24,7 @@
   abstract      = {In the era of big data, some data records are interrelated with each other in many areas, such as mar- keting, management, health care, and education. These interrelated data can be more naturally repre- sented as networks with nodes and edges. Inside this type of networks, there is usually a hidden com- munity structure where each community represents a relatively independent functional module. Such hidden community structures are useful for many applications, such as word-of-mouth marketing, pro- moting decentralized social interactions inside organizations, and searching biological pathways related to various diseases. Therefore, how to detect hidden community structures becomes an important task with wide applications. Currently, modularity-based methods are widely-used among many existing com- munity structure detection methods. They detect communities with more internal edges than expected under the null hypothesis of independence. Since research in correlation analysis also searches for pat- terns which occur more than expected under the null hypothesis of independence, this paper proposed a framework of changing the original modularity function according to different existing correlation func- tions in the correlation analysis research area. Such a framework can utilize not only the current but also the future potential research progresses in correlation analysis to advance community detection. In addition, a novel graphical analysis on different modified-modularity functions is conducted to analyze their different preferences, which are also validated by our evaluation on both real life and simulated networks. Our work to connect modularity-based methods with correlation analysis has several signifi- cant impacts on the community detection research and its applications to expert and intelligent systems. First, the research progress in correlation analysis can be utilized to define a more effective objective function in community detection for better detection results since different real-lif e applications might need communities with different resolutions. Second, any existing research progress for the modularity function, such as the Louvain method for speeding up the search and different extensions for overlap- ping community detection, can be applied in a similar way to the new objective function derived from existing correlation functions, because the new objective function is unified within one framework with the modularity function. Third, our framework opens a large unexplored area for the researchers inter- ested in community detection. For example, what is the best heuristic search method for each different objective function? What are the characteristics of each objective function when applied to overlapping community detection? Among different extensions to overlapping community detection, which extension is better for each objective function?},
   doi           = {10.1016/j.eswa.2017.05.010},
   file          = {:Utilizing advances in correlation analysis for community structure detection.pdf:PDF},
-  journaltitle  = {Expert Systems with Applications},
+  journal       = {Expert Systems with Applications},
   owner         = {Vincent},
   timestamp     = {2017.05.18},
   url           = {http://www.sciencedirect.com/science/article/pii/S0957417417303238},
@@ -46883,7 +46883,6 @@ http://arxiv.org/abs/1308.3508},
   number    = {25},
   pages     = {258103},
   file      = {:The Dynamics of Multidimensional Secession- Fixed Points and Ideological Condensation.pdf:PDF},
-  keywords  = {simple-model ; evolution},
   owner     = {Vincent},
   timestamp = {2010.07.22},
   url       = {http://prl.aps.org/abstract/PRL/v90/i25/e258103},
