testing synch class (jabref)

--- a/in/bibtex/review.bib
+++ b/in/bibtex/review.bib
@@ -751,7 +751,7 @@
 
 @Article{Albert1999,
   author    = {Albert, R. and Jeong, H. and Barabási, A. L.},
-  title     = {Diameter of the World-Wide Web},
+  title     = {Internet: Diameter of the World-Wide Web},
   journal   = {Nature},
   year      = {1999},
   volume    = {401},
@@ -3336,7 +3336,7 @@ Leveraging these techniques, we explore massive datasets such as networks with b
 
 @Article{Banisch2014,
   author    = {Banisch, Ralf and Schütte, Christof and Djurdjevac Conrad, Nataša},
-  title     = {Loop-based Module Detection in Directed Networks},
+  title     = {Cycle-flow–based module detection in directed recurrence networks},
   journal   = {arXiv},
   year      = {2014},
   volume    = {physics.data-an},
@@ -12742,7 +12742,7 @@ We embed the resulting class of algorithms within a generic family of graph neur
 
 @Article{Domenico2013,
   author    = {de Domenico, Manlio and Solè-Ribalta, Albert and Cozzo, Emanuele and Kivelä, Mikko and Moreno, Yamir and Porter, Mason A. and Gòmez, Sergio and Arenas, Alex},
-  title     = {Mathematical Formulation of Multi-Layer Networks},
+  title     = {Mathematical Formulation of Multilayer Networks},
   journal   = {arXiv},
   year      = {2013},
   volume    = {physics.soc-ph},
@@ -12755,7 +12755,7 @@ We embed the resulting class of algorithms within a generic family of graph neur
 
 @Article{Domenico2014,
   author    = {de Domenico, Manlio and Lancichinetti, Andrea and Arenas, Alex and Rosvall, Martin},
-  title     = {Identifying modular flows on multilayer networks reveals highly overlapping organization in social systems},
+  title     = {Identifying Modular Flows on Multilayer Networks Reveals Highly Overlapping Organization in Interconnected Systems},
   journal   = {arXiv},
   year      = {2014},
   volume    = {physics.soc-ph},
@@ -40238,7 +40238,7 @@ We present PMEP, a distributed-memory based parallel community detection algorit
 }
 
 @Article{Qian2013a,
-  author    = {Qian, Tieyun and Li, Qing and Liu, Bing and Xiong, Hui and Srivastava, Jaideep and Sheu, Phillip C. -Y.},
+  author    = {Qian, Tieyun and Li, Qing and Liu, Bing and Xiong, Hui and Srivastava, Jaideep and Sheu, Phillip C.-Y.},
   title     = {Topic formation and development: a core-group evolving process},
   journal   = {World Wide Web},
   year      = {2013},
@@ -41315,7 +41315,7 @@ We present PMEP, a distributed-memory based parallel community detection algorit
 }
 
 @Book{Reichardt2009,
-  title     = {Structure in Networks},
+  title     = {Structure in Complex Networks},
   publisher = {Springer},
   year      = {2009},
   author    = {Reichardt, Jörg},
@@ -53939,7 +53939,7 @@ http://arxiv.org/abs/1308.3508},
 
 @Article{Yang2013,
   author    = {Yang, Jaewon and Leskovec, Jure},
-  title     = {Densely Overlapping Communities Lead to Global Core-Periphery Structure of Complex Networks},
+  title     = {Overlapping Communities Explain Core-Periphery Organization of Networks},
   journal   = {Nature},
   year      = {2013},
   volume    = {in press},
@@ -56042,7 +56042,7 @@ http://arxiv.org/abs/1308.3508},
 }
 
 @Article{Zhang2011c,
-  author    = {Zhang, J. -Fang and Shao, Z. -Gang},
+  author    = {Zhang, J.-Fang and Shao, Z.-Gang},
   title     = {Complex networks from lévy noise},
   journal   = {Indian Journal of Physics},
   year      = {2011},
