--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1,5 +1,29 @@
 % Encoding: UTF-8
 
+@Book{Uitermark2012,
+  title     = {Dynamics of Power in Dutch Integration Politics: From Accommodation to Confrontation},
+  publisher = {Amsterdam University Press},
+  year      = {2012},
+  author    = {Uitermark, Justus},
+  series    = {Solidarity and Identity},
+  abstract  = {Integration politics in the Netherlands has changed dramatically between 1990 and 2005. Whereas ethnic and religious differences were hitherto pacified through accommodation, a new and increasingly powerful current in Dutch politicsproblematizes the presence of minorities.This development represents a challenge to sociologists and political scientists: how to map and explain drastic changes?Arguing that extant approaches are better at explaining continuity than change, this book develops a distinct approach to the study of dynamic power relations to understand drastic transformations in the national debate as well as urban governance.},
+  owner     = {Vincent},
+  timestamp = {2017.06.19},
+  url       = {http://www.jstor.org/stable/j.ctt45kdp8},
+}
+
+@InProceedings{Adamic2005,
+  author    = {Adamic, L. A. and Glance, N.},
+  title     = {The political blogosphere and the 2004 US election: divided they blog},
+  booktitle = {3rd international workshop on Link discovery},
+  year      = {2005},
+  pages     = {36-43},
+  doi       = {10.1145/1134271.1134277},
+  file      = {:The political blogosphere and the 2004 US election- divided they blog.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.21},
+}
+
 @Article{Ahmadizadeh2017,
   author        = {Ahmadizadeh, S. and Shames, I. and Martin, S. and Nešić, D.},
   title         = {On Eigenvalues of Laplacian matrix for a class of directed signed graphs},
@@ -1622,6 +1646,20 @@
   timestamp = {2010.09.03},
 }
 
+@Article{He-Li2015,
+  author    = {Sun, H.-L. and Huang, J.-B. and Tian, Y.-Q. and Song, Q.-B. and Liu, H.-L.},
+  title     = {Detecting overlapping communities in networks via dominant label propagation},
+  journal   = {Chinese Physics B},
+  year      = {2015},
+  volume    = {24},
+  number    = {1},
+  pages     = {018703},
+  doi       = {10.1088/1674-1056/24/1/018703},
+  file      = {:Detecting overlapping communities in networks via dominant label propagation.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2015.09.10},
+}
+
 @InProceedings{Hogg2008,
   author        = {Hogg, T. and Wilkinson, D. M. and Szabo, G. and Brzozowski, M. J.},
   title         = {Multiple relationship types in online communities and social networks},
@@ -1970,7 +2008,7 @@
 @Article{Kropivnik1996,
   author    = {Kropivnik, S. and Mrvar, A.},
   title     = {An Analysis of the Slovene Parliamentary Parties Network},
-  journal   = {Metodološki Zvezki},
+  journal   = {Metodološki Zvezki / Advances in Methodology and Statistics},
   year      = {1996},
   volume    = {12},
   pages     = {209-216},
@@ -2130,6 +2168,20 @@
   url          = {http://snap.stanford.edu/data},
   owner        = {Vincent},
   timestamp    = {2016.11.01},
+}
+
+@Article{Levin2017,
+  author        = {Levin, M. S.},
+  title         = {Towards balanced clustering - Part 1 (preliminaries)},
+  journal       = {arXiv},
+  year          = {2017},
+  volume        = {cs.DS},
+  pages         = {1706.03065},
+  __markedentry = {[Vincent:]},
+  file          = {:Towards balanced clustering - part 1 (preliminaries).pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.18},
+  url           = {https://arxiv.org/abs/1706.03065},
 }
 
 @InProceedings{Levorato2015,
@@ -2360,6 +2412,20 @@
   file      = {:Community Detection in Weighted Networks- Algorithms and Applications.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2013.02.04},
+}
+
+@Article{Ludwig2009,
+  author    = {Ludwig, M. and Abell, P.},
+  title     = {Structural Balance: A Dynamic Perspective},
+  journal   = {Journal of Mathematical Sociology},
+  year      = {2009},
+  volume    = {33},
+  number    = {2},
+  pages     = {129-155},
+  doi       = {10.1080/00222500902718239},
+  file      = {:Structural Balance- A Dynamic Perspective.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.21},
 }
 
 @Article{Lusseau2003a,
@@ -2604,6 +2670,19 @@
   file      = {:A Critical Point for a Random Graph With a Given Degree Sequence.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@TechReport{Moscato1989,
+  author      = {Moscato, P.},
+  title       = {On evolution, search, optimization, genetic algorithms and martial arts-towards memetic algorithms},
+  institution = {Caltech Concurrent Computation Program},
+  year        = {1989},
+  type        = {Technical Report},
+  number      = {826},
+  doi         = {10.1.1.27.9474},
+  file        = {:On evolution, search, optimization, genetic algorithms and martial arts-towards memetic algorithms.pdf:PDF},
+  owner       = {Vincent},
+  timestamp   = {2017.06.19},
 }
 
 @Article{Mrvar2009,
@@ -2852,6 +2931,18 @@
   url       = {http://arxiv.org/abs/1203.1394},
 }
 
+@InProceedings{Pizzuti2009,
+  author    = {Pizzuti, C.},
+  title     = {A Multi-objective Genetic Algorithm for Community Detection in Networks},
+  booktitle = {21st IEEE International Conference on Tools with Artificial Intelligence},
+  year      = {2009},
+  pages     = {379-386},
+  doi       = {10.1109/ICTAI.2009.58},
+  file      = {:A Multi-Objective Genetic Algorithm for Community Detection in Networks.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2012.06.13},
+}
+
 @InProceedings{Pons2005,
   author    = {Pons, P. and Latapy, M.},
   title     = {Computing communities in large networks using random walks},
@@ -2983,6 +3074,21 @@
   file      = {:Simple Probabilistic Algorithm for Detecting Community Structure.pdf:PDF},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@InCollection{Resendel2005,
+  author    = {Resendel, M. G. C. and Ribeiro, C. C.},
+  title     = {GRASP with Path-Relinking: Recent Advances and Applications},
+  booktitle = {Metaheuristics: Progress as Real Problem Solvers},
+  year      = {2005},
+  volume    = {32},
+  series    = {Operations Research/Computer Science Interfaces Series},
+  chapter   = {2},
+  pages     = {29-63},
+  doi       = {10.1007/0-387-25383-1_2},
+  file      = {:GRASP with Path-Relinking- Recent Advances and Applications.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.19},
 }
 
 @Article{Richardson2009,
@@ -3665,6 +3771,21 @@
   url           = {https://open.library.ubc.ca/cIRcle/collections/ubctheses/24/items/1.0347257},
 }
 
+@Article{Wang2013t,
+  author        = {Wang, Y. and Cao, J.},
+  title         = {Cluster synchronization in nonlinearly coupled delayed networks of non-identical dynamic systems},
+  journal       = {Nonlinear Analysis: Real World Applications},
+  year          = {2013},
+  volume        = {14},
+  number        = {1},
+  pages         = {842-851},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.nonrwa.2012.08.005},
+  file          = {:Cluster synchronization in nonlinearly coupled delayed networks of non-identical dynamic systems.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.21},
+}
+
 @InProceedings{West2014,
   author    = {West, R. and Paskov, H. S. and Leskovec, J. and Potts, C.},
   title     = {Exploiting Social Network Structure for Person-to-Person Sentiment Analysis},
@@ -3731,6 +3852,21 @@
   file          = {:Examining spectral space of complex networks with positive and negative links.pdf:PDF},
   owner         = {Vincent},
   timestamp     = {2017.05.30},
+}
+
+@Article{Wu2012g,
+  author        = {Wu, J. and Wang, X. and Jiao, L.},
+  title         = {Synchronization on overlapping community network},
+  journal       = {Physica A},
+  year          = {2012},
+  volume        = {391},
+  number        = {3},
+  pages         = {508-514},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.physa.2011.08.059},
+  file          = {:Synchronization on overlapping community network.pdf:PDF},
+  owner         = {Vincent},
+  timestamp     = {2017.06.21},
 }
 
 @InProceedings{Wu2014j,
@@ -4110,15 +4246,15 @@
 
 @Comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
-1 ExplicitGroup:Graph Partitioning\;0\;Aref2016\;Aref2017\;Arenas2008b\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Barber2007\;Bhatia2008\;Bhattacharya2008\;Blondel2008\;Bonacich2004\;Brandes2010\;Brusco2010\;Brusco2010a\;Chakraborty2014\;Chang2012b\;Chang2017\;Chen2010f\;Chen2014r\;Chen2017a\;Chen2017b\;Costa2014a\;Cucuringu2012\;DasGupta2007\;Demaine2003\;Demaine2006\;Doreian2008\;Doreian2013\;Doreian2015\;Drummond2013\;DuBois2009\;Duch2005\;Estrada2014b\;Fenn2009\;Fenn2012\;Figueiredo2014\;Gael2007\;Gallier2015\;Giotis2006\;Girvan2002a\;Giscard2017\;Gong2012\;Gupta2017\;Hassan2012a\;Heimo2008\;Hou2005\;Hsieh2012\;Huang2010a\;Huang2011\;Hueffner2010\;Ilev2016\;Jensen2006\;Jordan2013\;Kernighan1970\;Khadivi2010a\;Kim2011a\;Kolluri2004\;Kunegis2015a\;Larusso2010\;Levorato2015\;Levorato2017a\;Li2008b\;Li2010f\;Li2016r\;Li2016s\;Li2017b\;Li2017c\;Liu2010i\;Lo2011\;Lo2013\;Lu2013\;Luxburg2007\;Ma2014d\;Ma2017a\;MacMahon2013\;Mason2009\;Mucha2010\;Mucha2010a\;Neda2006\;Newman2006\;Newman2006b\;Newman2007a\;Ou2007\;Ozer2016\;Pons2005\;Qi2016\;Qi2017\;Radicchi2004\;Raghavan2007\;Ren2009\;Richardson2009\;Rosvall2008\;Sedoc2016\;Shahriari2015\;Shahriari2016a\;Shang2017a\;Sharma2009\;Shen2009\;Shen2010\;Shen2011a\;Shen2013g\;Sontag2007\;Sun2014g\;Terzi2011\;Traag2011\;Veldt2016\;Wahid2017\;Wu2012\;Wu2012f\;Yang2015f\;Yang2017c\;Yu2003\;Zahn1964\;Zaslavsky2010\;Zhan2016a\;Zhang2010g\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
-1 ExplicitGroup:Datasets\;0\;Bales1970\;Biswal2010\;Brandes2010\;Costanzo2001\;Ghosn2004\;Hogg2008\;Krebs2002\;Kunegis2013a\;Lemann1952\;Leskovec2010d\;Leskovec2014\;Lusseau2003a\;Maniu2011a\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Neal2014\;Newcomb1961\;Oda2004\;Oda2005\;Poole2011\;Salgado2006\;Sampson1968\;Shwed2010\;Tang2015b\;VanEssen2012\;Viswanath2009\;Voeten2013\;West2014\;Yang2012g\;Zachary1977\;;
-1 ExplicitGroup:Others\;0\;Ahmadizadeh2017\;Antal2006\;Belardo2014\;Belardo2016\;Belaza2017\;Chen2017d\;Chiang2014\;Cohen1960\;Costantini2014\;Doreian2004\;Galam1996\;Gawronski2005\;Gawronski2005a\;Goodman1954\;Guimera2005\;Hage1983a\;Harary1957\;Harary2002\;Hou2005\;Huang2011\;Jalili2017\;Jordan2013\;Kaur2015\;Kulakowski2005\;Kunegis2013\;Li2015v\;Lijphart1963\;Marvel2011\;Molloy1995\;Newman2006\;Newman2006b\;Pelino2012\;Reichardt2006\;Rovira-Asenjo2013\;Shahriari2016c\;Shahriary2015\;Shames2014\;Szell2010\;Szella2010\;Tan2016\;Traag2013a\;VanderWeele2010\;William2010\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;;
+1 ExplicitGroup:Graph Partitioning\;0\;Aref2016\;Aref2017\;Arenas2008b\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Barber2007\;Bhatia2008\;Bhattacharya2008\;Blondel2008\;Bonacich2004\;Brandes2010\;Brusco2010\;Brusco2010a\;Chakraborty2014\;Chang2012b\;Chang2017\;Chen2010f\;Chen2014r\;Chen2017a\;Chen2017b\;Costa2014a\;Cucuringu2012\;DasGupta2007\;Demaine2003\;Demaine2006\;Doreian2008\;Doreian2013\;Doreian2015\;Drummond2013\;DuBois2009\;Duch2005\;Estrada2014b\;Fenn2009\;Fenn2012\;Figueiredo2014\;Gael2007\;Gallier2015\;Giotis2006\;Girvan2002a\;Giscard2017\;Gong2012\;Gupta2017\;Hassan2012a\;He-Li2015\;Heimo2008\;Hou2005\;Hsieh2012\;Huang2010a\;Huang2011\;Hueffner2010\;Ilev2016\;Jensen2006\;Jordan2013\;Kernighan1970\;Khadivi2010a\;Kim2011a\;Kolluri2004\;Kunegis2015a\;Larusso2010\;Levin2017\;Levorato2015\;Levorato2017a\;Li2008b\;Li2010f\;Li2016r\;Li2016s\;Li2017b\;Li2017c\;Liu2010i\;Lo2011\;Lo2013\;Lu2013\;Luxburg2007\;Ma2014d\;Ma2017a\;MacMahon2013\;Mason2009\;Mucha2010\;Mucha2010a\;Neda2006\;Newman2006\;Newman2006b\;Newman2007a\;Ou2007\;Ozer2016\;Pizzuti2009\;Pons2005\;Qi2016\;Qi2017\;Radicchi2004\;Raghavan2007\;Ren2009\;Richardson2009\;Rosvall2008\;Sedoc2016\;Shahriari2015\;Shahriari2016a\;Shang2017a\;Sharma2009\;Shen2009\;Shen2010\;Shen2011a\;Shen2013g\;Sontag2007\;Sun2014g\;Terzi2011\;Traag2011\;Veldt2016\;Wahid2017\;Wang2013t\;Wu2012\;Wu2012f\;Wu2012g\;Yang2015f\;Yang2017c\;Yu2003\;Zahn1964\;Zaslavsky2010\;Zhan2016a\;Zhang2010g\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
+1 ExplicitGroup:Datasets\;0\;Adamic2005\;Bales1970\;Biswal2010\;Brandes2010\;Costanzo2001\;Ghosn2004\;Hogg2008\;Krebs2002\;Kunegis2013a\;Lemann1952\;Leskovec2010d\;Leskovec2014\;Lusseau2003a\;Maniu2011a\;Massa2004\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Neal2014\;Newcomb1961\;Oda2004\;Oda2005\;Poole2011\;Salgado2006\;Sampson1968\;Shwed2010\;Tang2015b\;VanEssen2012\;Viswanath2009\;Voeten2013\;West2014\;Yang2012g\;Zachary1977\;;
+1 ExplicitGroup:Others\;0\;Ahmadizadeh2017\;Antal2006\;Belardo2014\;Belardo2016\;Belaza2017\;Chen2017d\;Chiang2014\;Cohen1960\;Costantini2014\;Doreian2004\;Galam1996\;Gawronski2005\;Gawronski2005a\;Goodman1954\;Guimera2005\;Hage1983a\;Harary1957\;Harary2002\;Hou2005\;Huang2011\;Jalili2017\;Jordan2013\;Kaur2015\;Kulakowski2005\;Kunegis2013\;Li2015v\;Lijphart1963\;Ludwig2009\;Marvel2011\;Molloy1995\;Moscato1989\;Newman2006\;Newman2006b\;Pelino2012\;Reichardt2006\;Resendel2005\;Rovira-Asenjo2013\;Shahriari2016c\;Shahriary2015\;Shames2014\;Szell2010\;Szella2010\;Tan2016\;Traag2013a\;Uitermark2012\;VanderWeele2010\;William2010\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;;
 1 ExplicitGroup:Just balance\;0\;Akiyama1981\;Antal2005\;Beigi2016\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;Easley2010a\;ElMaftouhi2012\;Facchetti2012\;Harary1953\;Harary1955\;Harary1960\;Harary1968\;Harary1979\;Harary1980\;Heider1944\;Heider1946\;Inohara2002\;Inohara2002a\;Khanafiah2004\;Kulakowski2007\;Leskovec2010b\;Maayan2008\;Marvel2009\;Norman1972\;Rijt2011\;Schwartz2010\;Srinivasan2011\;Szella2010\;Taylor1967\;Teixeira2017\;Tomescu1973\;Zheng2015b\;;
 1 ExplicitGroup:_Biblionet\;2\;;
-2 ExplicitGroup:_To do\;0\;Aref2017\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Bansal2002\;Bansal2004\;Becker2005\;Beigi2016\;Bhattacharya2008\;Chen2010f\;DasGupta2007\;Demaine2003\;Doreian2004\;Doreian2015\;Figueiredo2014\;Gael2007\;Giscard2017\;Gupta2017\;Hage1983a\;Harary1979\;Heimo2008\;Huang2010a\;Hueffner2010\;Ilev2016\;Inohara2002\;Inohara2002a\;Jordan2013\;Kim2011a\;Larusso2010\;Lemann1952\;Levorato2017a\;Li2017b\;Ma2015a\;Ma2017a\;Maayan2008\;MacMahon2013\;Marvel2009\;Puleo2015\;Schwartz2010\;Shang2017a\;Shen2010\;Sontag2007\;Tan2016\;Tang2015a\;Teixeira2017\;Veldt2016\;Yang2017c\;Zhan2016a\;Zheng2015b\;;
+2 ExplicitGroup:_To do\;0\;Aref2017\;Aszalos2013\;Aszalos2014\;Aszalos2015\;Aszalos2016\;Bansal2002\;Bansal2004\;Becker2005\;Beigi2016\;Bhattacharya2008\;Chen2010f\;DasGupta2007\;Demaine2003\;Doreian2004\;Doreian2015\;Figueiredo2014\;Gael2007\;Giscard2017\;Gupta2017\;Hage1983a\;Harary1979\;Heimo2008\;Huang2010a\;Hueffner2010\;Ilev2016\;Inohara2002\;Inohara2002a\;Jordan2013\;Kim2011a\;Larusso2010\;Lemann1952\;Levin2017\;Levorato2017a\;Li2017b\;Ma2015a\;Ma2017a\;Maayan2008\;MacMahon2013\;Marvel2009\;Puleo2015\;Schwartz2010\;Shang2017a\;Shen2010\;Sontag2007\;Tan2016\;Tang2015a\;Teixeira2017\;Veldt2016\;Yang2017c\;Zhan2016a\;Zheng2015b\;;
 2 ExplicitGroup:Found\;0\;Ahmadizadeh2017\;Amelio2013\;Amelio2016\;Anchuri2012\;Bonacich2004\;Bruggeman2012\;Brusco2010\;Brusco2010a\;Cai2014b\;Cai2015b\;Chang2012b\;Chang2013b\;Chen2014e\;Chen2015h\;Chen2015i\;Chiang2014\;Demaine2006\;Doreian1996\;Doreian2008\;Doreian2009\;Doreian2013\;Drummond2013\;Esmailian2014\;Esmailian2015\;Facchetti2011\;Fang2016\;Figueiredo2013\;GalOnHarel2015\;Gao2015\;Gawronski2015\;Giotis2006\;Gomez2009\;Gong2013b\;Granell2011a\;Hou2005\;Iacono2010\;Jensen2006\;Jiang2015\;Levorato2015\;Li2013g\;Li2015o\;Liu2014d\;Lo2013\;Macon2012\;Mrvar2009\;Mucha2010\;Mucha2010a\;Neda2006\;Qi2016\;Rubinov2011\;Shahriari2015a\;Sharma2009\;Sharma2012a\;Shen2011a\;Sun2014g\;Terzi2011\;Traag2009\;Wu2011g\;Wu2015f\;Yang2006b\;Yang2007\;Yang2007c\;Zeng2015\;Zhang2013r\;Zhao2017a\;Zhou2015j\;;
 2 ExplicitGroup:Not Found\;0\;Anchuri2011\;Aref2016\;Bogdanov2010\;Chang2017\;Chen2014r\;Chen2017a\;Chen2017b\;Chiang2012\;Cucuringu2013\;Doreian2005\;Gallier2015\;Guo2015c\;Harary1980\;Hassan2012a\;Hsieh2012\;Hu2017\;Kaplan2008\;Kunegis2010\;Kunegis2015a\;Li2010f\;Li2016r\;Li2016s\;Lo2011\;Ma2014d\;Murata2017\;Qi2017\;Santamaria2015\;Sedoc2016\;Shahriari2016a\;Sharma2015\;Shen2013g\;Traag2014\;Wahid2017\;Wu2012f\;Xue2014\;Yan2014\;Yang2015f\;Zaslavsky2010\;Zhang2010g\;;
-2 ExplicitGroup:Ignored\;0\;Ahmadizadeh2017\;Akiyama1981\;Antal2005\;Antal2006\;Arenas2008b\;Bales1970\;Barber2007\;Belardo2014\;Belardo2016\;Belaza2017\;Bhatia2008\;Biswal2010\;Blondel2008\;Brandes2010\;Cartwright1956\;Chakraborty2014\;Chen2017d\;Cohen1960\;Costa2014a\;Costantini2014\;Costanzo2001\;Cucuringu2012\;Davis1967\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;DuBois2009\;Duch2005\;Easley2010a\;ElMaftouhi2012\;Estrada2014b\;Facchetti2012\;Fenn2009\;Fenn2012\;Galam1996\;Gawronski2005\;Gawronski2005a\;Ghosn2004\;Girvan2002a\;Gong2012\;Goodman1954\;Guimera2005\;Harary1953\;Harary1955\;Harary1957\;Harary1959\;Harary1960\;Harary1965\;Harary1968\;Harary2002\;Heider1944\;Heider1946\;Hogg2008\;Hou2005\;Huang2011\;Jalili2017\;Kaur2015\;Kernighan1970\;Khadivi2010a\;Khanafiah2004\;Knuth1994\;Kolluri2004\;Krebs2002\;Krebs2004\;Kropivnik1996\;Kulakowski2005\;Kulakowski2007\;Kunegis2009\;Kunegis2013\;Kunegis2013a\;Leskovec2010b\;Leskovec2010d\;Leskovec2014\;Li2008b\;Li2015v\;Lijphart1963\;Liu2010i\;Lu2013\;Lusseau2003a\;Luxburg2007\;Maniu2011a\;Marvel2011\;Mason2009\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Molloy1995\;Neal2014\;Newcomb1961\;Newman2004\;Newman2004e\;Newman2006\;Newman2006b\;Newman2007a\;Norman1972\;Oda2004\;Oda2005\;Ou2007\;Ozer2016\;Pelino2012\;Pons2005\;Poole2011\;Radicchi2004\;Raghavan2007\;Read1954\;Reichardt2006\;Ren2009\;Richardson2009\;Roethlisberger1939\;Rosvall2008\;Salgado2006\;Sampson1968\;Shahriari2015\;Shahriari2016c\;Shahriary2015\;Shames2014\;Shen-Orr2002\;Shen2009\;Shwed2010\;Srinivasan2011\;Sun2013a\;Sun2013b\;Szell2010\;Szella2010\;Tang2015b\;Taylor1967\;Tomescu1973\;Traag2011\;Traag2013a\;VanEssen2012\;Viswanath2009\;Voeten2013\;West2014\;Wu2012\;Yang2012g\;Young1971\;Yu2003\;Zachary1977\;Zahn1964\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;;
+2 ExplicitGroup:Ignored\;0\;Adamic2005\;Ahmadizadeh2017\;Akiyama1981\;Antal2005\;Antal2006\;Arenas2008b\;Bales1970\;Barber2007\;Belardo2014\;Belardo2016\;Belaza2017\;Bhatia2008\;Biswal2010\;Blondel2008\;Brandes2010\;Cartwright1956\;Chakraborty2014\;Chen2017d\;Cohen1960\;Costa2014a\;Costantini2014\;Costanzo2001\;Cucuringu2012\;Davis1967\;Deng2012a\;DevadasAcharya1980\;Doreian2017\;DuBois2009\;Duch2005\;Easley2010a\;ElMaftouhi2012\;Estrada2014b\;Facchetti2012\;Fenn2009\;Fenn2012\;Galam1996\;Gawronski2005\;Gawronski2005a\;Ghosn2004\;Girvan2002a\;Gong2012\;Goodman1954\;Guimera2005\;Harary1953\;Harary1955\;Harary1957\;Harary1959\;Harary1960\;Harary1965\;Harary1968\;Harary2002\;Heider1944\;Heider1946\;Hogg2008\;Hou2005\;Huang2011\;Jalili2017\;Kaur2015\;Kernighan1970\;Khadivi2010a\;Khanafiah2004\;Knuth1994\;Kolluri2004\;Krebs2002\;Krebs2004\;Kropivnik1996\;Kulakowski2005\;Kulakowski2007\;Kunegis2009\;Kunegis2013\;Kunegis2013a\;Leskovec2010b\;Leskovec2010d\;Leskovec2014\;Li2008b\;Li2015v\;Lijphart1963\;Liu2010i\;Lu2013\;Ludwig2009\;Lusseau2003a\;Luxburg2007\;Maniu2011a\;Marvel2011\;Mason2009\;Massa2005\;Massa2007\;Mennes2013\;Milo2002\;Molloy1995\;Neal2014\;Newcomb1961\;Newman2004\;Newman2004e\;Newman2006\;Newman2006b\;Newman2007a\;Norman1972\;Oda2004\;Oda2005\;Ou2007\;Ozer2016\;Pelino2012\;Pizzuti2009\;Pons2005\;Poole2011\;Radicchi2004\;Raghavan2007\;Read1954\;Reichardt2006\;Ren2009\;Richardson2009\;Roethlisberger1939\;Rosvall2008\;Salgado2006\;Sampson1968\;Shahriari2015\;Shahriari2016c\;Shahriary2015\;Shames2014\;Shen-Orr2002\;Shen2009\;Shwed2010\;Srinivasan2011\;Sun2013a\;Sun2013b\;Szell2010\;Szella2010\;Tang2015b\;Taylor1967\;Tomescu1973\;Traag2011\;Traag2013a\;VanEssen2012\;Viswanath2009\;Voeten2013\;West2014\;Wu2012\;Yang2012g\;Young1971\;Yu2003\;Zachary1977\;Zahn1964\;Zaslavsky1981\;Zaslavsky1982\;Zaslavsky1998\;Zaslavsky2008\;Zhang2013s\;;
 }
 
 @Comment{jabref-meta: groupsversion:3;}
